# munin

./: Cargo.toml  readme.md
.cleanthat/: cleanthat.yaml
src/: main.rs
src/adapters/: cursor.rs
src/structs/: app.rs  mod.rs  process.rs
src/ui/: ui.rs
src/utils/: mod.rs  system_stats.rs
