[package]
name = "munin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.29.2"
crossterm = "0.26.1"
prettytable-rs = "0.10.0"
tui = { version = "0.19.0", features = ["termion"] }
termion = "2.0.1"
